<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="title_section1">Työtehtävät</string>
    <string name="title_section2">Uutiset</string>
    <string name="title_section3">Ohjeet</string>
    <string name="title_section4">Asetukset</string>
    <string name="NewsResource">DilleDong</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tyomaa_search_view">Haettava työmaa</string>
    <string name="tyomaa_search_button">Hae</string>
    <string name="title_activity_piirustukset_ohjeet">PiirustuksetOhjeetActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="piirustukset_ohjeet_search_view">Hae piirustus tai ohje</string>
    <string name="piirustukset_ohjeet_search_button">Hae</string>
    <string name="piirustukset_ohjeet__reset_search_button">Peruuta haku</string>
    <string name="tyomaa_reset_search_button">Peruuta haku</string>

</resources>
